install graphql and babel dependencies

--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
   "name": "directory-tree-graphql-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Node.Js api that allows a client app to:  Obtain the full directory listing of a given directory path on the local filesystem. Include the full path, file size and attribute information in the result",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Ivan Kipyegon",
+  "license": "ISC",
+  "dependencies": {
+    "apollo-server-express": "^2.21.2",
+    "express": "^4.17.1",
+    "graphql": "^15.5.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-watch": "^7.4.1"
+  }
 }
