--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "Node.Js api that allows a client app to:  Obtain the full directory listing of a given directory path on the local filesystem. Include the full path, file size and attribute information in the result",
   "main": "index.js",
   "scripts": {
+    "dev": "babel-watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Ivan Kipyegon",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.13.10",
     "apollo-server-express": "^2.21.2",
     "express": "^4.17.1",
     "graphql": "^15.5.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.13.12",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-watch": "^7.4.1"
