--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/core": "^7.13.10",
     "apollo-server-express": "^2.21.2",
+    "dree": "^2.6.1",
     "express": "^4.17.1",
     "graphql": "^15.5.0"
   },
