add babel plugins

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Node.Js api that allows a client app to:  Obtain the full directory listing of a given directory path on the local filesystem. Include the full path, file size and attribute information in the result",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
     "dev": "babel-watch index.js",
+    "build": "babel index.js -d dist",
+    "start": "npm run build && node dist/index.js",
+    "lint": "eslint . --ext .js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,9 +22,18 @@
     "graphql-voyager": "^1.0.0-rc.31"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.13.10",
+    "@babel/eslint-plugin": "^7.13.10",
+    "@babel/plugin-proposal-export-default-from": "^7.12.13",
+    "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.12",
+    "@babel/register": "^7.13.8",
+    "@babel/runtime": "^7.13.10",
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.1.0",
     "babel-preset-env": "^1.7.0",
-    "babel-watch": "^7.4.1"
+    "babel-watch": "^7.4.1",
+    "eslint": "^7.22.0",
+    "eslint-plugin-graphql": "^4.0.0"
   }
 }
